--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,9 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+h1 {
+    font-family: 'Futura';
+    margin: 1.5rem;
+    font-size: 2vw;
+}
